# genie-flow-invoker-docproc

./: .gitignore  README.md  pyproject.toml
genie_flow_invoker/invoker/docproc/: backoff_caller.py  clean.py  codec.py  embed.py  model.py  parse.py  similarity_search.py
genie_flow_invoker/invoker/docproc/chunk/: __init__.py  lexical_density.py  splitter.py  word_splitter.py
genie_flow_invoker/invoker/docproc/clean/: __init__.py  cleaner.py
genie_flow_invoker/invoker/docproc/embed/: __init__.py  manager.py
genie_flow_invoker/invoker/docproc/model/: __init__.py
genie_flow_invoker/invoker/docproc/similarity_search/: __init__.py  db.py  search.py
src/genie_flow_invoker/invoker/docproc/: init_docproc.py  parse.py
src/genie_flow_invoker/invoker/docproc/chunk/: __init__.py  lexical_density.py  splitter.py  transcript.py  word_splitter.py
src/genie_flow_invoker/invoker/docproc/clean/: __init__.py  cleaner.py
src/genie_flow_invoker/invoker/docproc/embed/: __init__.py
src/genie_flow_invoker/invoker/docproc/model/: __init__.py
src/genie_flow_invoker/invoker/docproc/similarity_search/: __init__.py  db.py  search.py
tests/: conftest.py  test_chunk.py  test_chunk_lexical.py  test_chunk_word.py  test_clean.py  test_e2e.py  test_embed.py  test_model.py  test_models.py  test_search.py  test_webvtt.py
tests/resources/: TEAMS-SurveyResponse-Genie.vtt  ZOOM-closed_caption.txt  ZOOM-video1009782420.vtt  about-pa.txt  docker-compose.yaml
