[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
genie_flow_invoker = "genie_flow_invoker"

[project]
name = "genie_flow_invoker_docproc"
authors = [
    { name = "Willem van Asperen", email = "willem.van.asperen@paconsulting.com"}
]
description = "Genie Flow Invoker Document Process"
readme = "README.md"
requires-python = "~=3.11.0"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies=[
    "loguru~=0.7.2",
    "genie-flow-invoker~=0.6.0",
    "pydantic~=2.9.2",
    "bidict~=0.23.1",
    "pydantic~=2.9.2",
    "tika~=2.6.0",
]
dynamic = ["version"]
